@@ -31,8 +31,3 @@ NODE_STATE_END(archNodeState);
 #ifdef ARM_BASE_CP14_SAVE_AND_RESTORE
 extern user_breakpoint_state_t armKSNullBreakpointState VISIBLE;
 #endif
-
-#ifdef CONFIG_KERNEL_GLOBALS_FRAME
-extern word_t armKSGlobalsFrame[BIT(ARMSmallPageBits) / sizeof(word_t)];
-#endif
-
